--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://database-1.cawd3m0g47ca.us-east-1.rds.amazonaws.com:3306/devti?allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/devti?allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Hu3ll!nt0n
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
