--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/devti?allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:mysql://database.localhost:3306/devti?allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
